# build-pf

./: .gitignore  CMakeLists.txt  README.md  build.sh  go.mod  gobi  main.go  platform-setup.sh  platform.sh  readme.md
app/: main.c
cmd/: build.go  clean.go  generate.go  root.go
components/: CMakeLists.txt
components/TestComponent/: CMakeLists.txt
components/TestComponent/inc/: TestComponent.h
components/TestComponent/src/: TestComponent.c
components/builder/: builder.go  builder_internals.go
components/crawler/: crawler.go  crawler_internals.go
components/env/: env.go
components/filesystem/: filesystem.go
components/logger/: logger.go
components/parser/: parser.go
components/project/: project.go  project_internals.go
components/project/crawler/: crawler.go  (+1 more)
doc/: .gitkeep
modules/builder/: builder.go
modules/cache/: cache.go
modules/env/: env.go  env_internals.go
modules/filesystem/: filesystem.go
modules/logger/: logger.go
modules/project/: project.go
platform/resources/: ldd_template.csv  ldd_template.json  preliminary_xml_component_template.xml  properties.json
platform/scripts/: platform-presets.json  platform-setup.py
test/templates/: gobi-config-template.json  lib-config-template.json
test/test-large-c-project/: README.md  gobi.json  main-app  main.c
tools/resources/: ldd_template.csv  ldd_template.json  ldd_template.txt  ldd_template.xml  temp_component_cmake_template.txt
tools/sandbox/: pyvenv.cfg
tools/scripts/: json_generator.py  new_component.py  new_ldd_component.py  readme.md  xml_generator.py
(+36 files in other folders)
